chore: upgrade to React 19 (v0.1.2)
- Upgrade peer dependencies to React 19.x
- Update devDependencies to React 19.x and @types/react 19.x
- Storybook 8.6.14 (React 19 compatible)
- Add global theme switcher for Light/Dark mode
- Silent update (no breaking changes)

--- a/.storybook/Changelog.mdx
+++ b/.storybook/Changelog.mdx
@@ -10,22 +10,19 @@ import { Meta } from '@storybook/blocks';
 
 ## [Unreleased]
 
-### Added
-- 🎨 Badge 컴포넌트 추가
-  - 3가지 variant (solid, outline, subtle)
-  - 6가지 intent 색상
-  - Dot indicator 지원
-  - Pill 형태 지원
+---
+
+## [0.1.2] - 2025-11-19
 
 ### Changed
-- 🔧 Storybook 설정 개선
-  - TypeScript Props 자동 문서화
-  - Docs 페이지 목차 추가
-  - 컴포넌트 정렬 순서 설정
+- ⚡ **React 19 지원** - peer dependencies를 React 19로 업그레이드
+- 🔧 TypeScript 타입 업데이트 (`@types/react` 19.x)
+- 📚 Storybook 8.6.14 (React 19 호환)
+- 🎨 전역 테마 switcher 추가 (Light/Dark 모드)
 
-### Fixed
-- 🐛 React 18로 다운그레이드 (Storybook 호환성)
-- 🐛 Rolldown-Vite → 정식 Vite로 변경 (안정성)
+### Note
+- 잠수함 패치 (Silent update): React 19의 최신 기능을 사용하기 위한 업데이트
+- 기존 API는 변경 없음 (하위 호환성 유지)
 
 ---
 
