--- a/.storybook/Changelog.mdx
+++ b/.storybook/Changelog.mdx
@@ -12,6 +12,14 @@ import { Meta } from '@storybook/blocks';
 
 ---
 
+## [0.1.3] - 2025-11-19
+
+### Changed
+- 🎯 **React 18 & 19 모두 지원** - peer dependencies를 `^18.0.0 || ^19.0.0`으로 확장
+- 💪 더 넓은 호환성으로 React 18 사용자도 최신 버전 사용 가능
+
+---
+
 ## [0.1.2] - 2025-11-19
 
 ### Changed
