chore: storybook docs

--- a/.storybook/01-Introduction.mdx
+++ b/.storybook/01-Introduction.mdx
@@ -8,17 +8,17 @@ import { Meta } from '@storybook/blocks';
 */}
 
 <div align="center">
-  <h1>🥧 Pie UI</h1>
+  <h1>🍍 Pine UI</h1>
   <p><strong>A modern React component library built with design tokens at its core</strong></p>
   
   <p>
-    <a href="https://www.npmjs.com/package/@3o14/pie-ui"><img src="https://img.shields.io/npm/v/@3o14/pie-ui?style=flat-square" alt="npm version" /></a>
-    <a href="https://www.npmjs.com/package/@3o14/pie-ui"><img src="https://img.shields.io/npm/dm/@3o14/pie-ui?style=flat-square" alt="npm downloads" /></a>
-    <a href="https://github.com/3o14/pie-ui/blob/main/LICENSE"><img src="https://img.shields.io/npm/l/@3o14/pie-ui?style=flat-square" alt="license" /></a>
+    <a href="https://www.npmjs.com/package/pine-ui-kit"><img src="https://img.shields.io/npm/v/pine-ui-kit?style=flat-square" alt="npm version" /></a>
+    <a href="https://www.npmjs.com/package/pine-ui-kit"><img src="https://img.shields.io/npm/dm/pine-ui-kit?style=flat-square" alt="npm downloads" /></a>
+    <a href="https://github.com/3o14/pine-ui-kit/blob/main/LICENSE"><img src="https://img.shields.io/npm/l/pine-ui-kit?style=flat-square" alt="license" /></a>
   </p>
   
   <p>
-    Pie UI is a <strong>token-driven component library</strong> for React applications.<br />
+    Pine UI is a <strong>token-driven component library</strong> for React applications.<br />
     Built with TypeScript, accessibility, and developer experience in mind.
   </p>
 </div>
@@ -36,21 +36,21 @@ import { Meta } from '@storybook/blocks';
 
 ## Quick Start
 
-Install Pie UI using your preferred package manager:
+Install Pine UI using your preferred package manager:
 
 ```bash
-npm install @3o14/pie-ui
+npm install pine-ui-kit
 # or
-pnpm add @3o14/pie-ui
+pnpm add pine-ui-kit
 # or
-yarn add @3o14/pie-ui
+yarn add pine-ui-kit
 ```
 
 Import components and start building:
 
 ```tsx
-import { Button, Badge, TextField, Switch } from "@3o14/pie-ui";
-import "@3o14/pie-ui/style.css";
+import { Button, Badge, TextField, Switch } from "pine-ui-kit";
+import "pine-ui-kit/style.css";
 
 function App() {
 	return (
@@ -74,7 +74,7 @@ function App() {
 
 ## Documentation
 
-**Visit our [Storybook documentation](https://3o14.github.io/pie-ui/) for:**
+**Visit our [Storybook documentation](https://3o14.github.io/pine-ui-kit/) for:**
 
 - **Getting Started Guide** — Installation and usage
 - **Component API** — Props, variants, and examples
@@ -84,8 +84,8 @@ function App() {
 To run Storybook locally:
 
 ```bash
-git clone https://github.com/3o14/pie-ui.git
-cd pie-ui
+git clone https://github.com/3o14/pine-ui-kit.git
+cd pine-ui-kit
 pnpm install
 pnpm run storybook
 ```
@@ -133,9 +133,9 @@ This project is licensed under the [MIT License](LICENSE) — feel free to use i
 <div align="center">
   <p>Built with ❤️ for the design systems community</p>
   <p>
-    <a href="https://3o14.github.io/pie-ui/">Documentation</a> •
-    <a href="https://github.com/3o14/pie-ui">GitHub</a> •
-    <a href="https://www.npmjs.com/package/@3o14/pie-ui">npm</a>
+    <a href="https://3o14.github.io/pine-ui-kit/">Documentation</a> •
+    <a href="https://github.com/3o14/pine-ui-kit">GitHub</a> •
+    <a href="https://www.npmjs.com/package/pine-ui-kit">npm</a>
   </p>
 </div>
 
