docs: introduction update

--- a/.storybook/01-Introduction.mdx
+++ b/.storybook/01-Introduction.mdx
@@ -91,21 +91,49 @@ pnpm run storybook
 
 ## Components
 
-| Component     | Description                            |
-| ------------- | -------------------------------------- |
-| **Badge**     | Display status, labels, or counts      |
-| **Button**    | Primary actions with multiple variants |
-| **Checkbox**  | Selectable input with custom styling   |
-| **Dialog**    | Modal dialogs with Portal support      |
-| **Dropdown**  | Select input with custom options       |
-| **Switch**    | Toggle between two states              |
-| **TextField** | Text input with validation states      |
-
+<table>
+  <thead>
+    <tr>
+      <th>Component</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><strong>Badge</strong></td>
+      <td>Display status, labels, or counts</td>
+    </tr>
+    <tr>
+      <td><strong>Button</strong></td>
+      <td>Primary actions with multiple variants</td>
+    </tr>
+    <tr>
+      <td><strong>Checkbox</strong></td>
+      <td>Selectable input with custom styling</td>
+    </tr>
+    <tr>
+      <td><strong>Dialog</strong></td>
+      <td>Modal dialogs with Portal support</td>
+    </tr>
+    <tr>
+      <td><strong>Dropdown</strong></td>
+      <td>Select input with custom options</td>
+    </tr>
+    <tr>
+      <td><strong>Switch</strong></td>
+      <td>Toggle between two states</td>
+    </tr>
+    <tr>
+      <td><strong>TextField</strong></td>
+      <td>Text input with validation states</td>
+    </tr>
+  </tbody>
+</table>
 ## Tech Stack
 
 Built with modern tools for optimal developer experience:
 
-- [React 18](https://react.dev/) — UI library
+- [React 19](https://react.dev/) — UI library
 - [TypeScript](https://www.typescriptlang.org/) — Type safety
 - [Vanilla Extract](https://vanilla-extract.style/) — Zero-runtime CSS-in-TS
 - [Vite](https://vitejs.dev/) — Lightning-fast build tool
@@ -125,12 +153,9 @@ If you'd like to contribute:
 
 ## License
 
-This project is licensed under the [MIT License](LICENSE) — feel free to use it in your projects!
-
----
+This project is licensed under the [MIT License](LICENSE) — feel free to use it in your projects! :D
 
 <div align="center">
-  <p>Built with ❤️ for the design systems community</p>
   <p>
     <a href="https://3o14.github.io/pine-ui-kit/">Documentation</a> •
     <a href="https://github.com/3o14/pine-ui-kit">GitHub</a> •
