docs: component layer

--- a/.storybook/03-Changelog/index.mdx
+++ b/.storybook/03-Changelog/index.mdx
@@ -1,6 +1,6 @@
 import { Meta, Title, Subtitle, Heading } from "@storybook/blocks";
 
-<Meta title="Changelog/CHANGELOG" />
+<Meta title="_Changelog/CHANGELOG" />
 
 <Title>Changelog</Title>
 
