--- a/.storybook/changelog/v0.mdx
+++ b/.storybook/changelog/v0.mdx
@@ -1,6 +1,6 @@
 import { Meta, Title, Subtitle, Heading } from "@storybook/blocks";
 
-<Meta title="Changelog/V0" />
+<Meta title="_Changelog/V0" />
 
 <Title>Version 0</Title>
 
